--- a/.github/workflows/update_ip_blocks_nigeria.yml
+++ b/.github/workflows/update_ip_blocks_nigeria.yml
@@ -3,8 +3,7 @@ name: Update IP Blocks
 on:
   schedule:
     - cron: '0 2 * * *'  # Runs daily at 2 AM UTC
-
-  workflow_dispatch:  # Allows manual triggering from the GitHub UI
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   update-ip-blocks:
@@ -13,25 +12,28 @@ jobs:
     steps:
     - name: Check out the repository
       uses: actions/checkout@v3
-      
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.x'
-      
+
     - name: Install dependencies
       run: |
         pip install requests PyGithub
-      
-    - name: Run the script
-      run: python update_ip_blocks_nigeria.py
 
-    - name: Commit changes
+    - name: Run the script
+      run: python update_ip_blocks.py
+      continue-on-error: true  # Continue even if the script fails with exit code 1
+
+    - name: Check if changes were made
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add .
-        git commit -m 'Auto-update IP block list'
-        git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if git diff --quiet; then
+          echo "No changes to commit."
+        else
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add .
+          git commit -m "Auto-update IP block list for Nigeria"
+          git push
+        fi
