--- a/.github/workflows/update_ip_blocks_nigeria.yml
+++ b/.github/workflows/update_ip_blocks_nigeria.yml
@@ -2,39 +2,28 @@ name: Update IP Blocks for Nigeria
 
 on:
   schedule:
-    - cron: '0 2 * * *'  # Runs daily at 2 AM UTC
-  workflow_dispatch:  # Allows manual triggering
+    - cron: '0 0 * * *'  # Runs daily at midnight UTC
+  workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
   update-ip-blocks:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out the repository
-      uses: actions/checkout@v3
+      - name: Check out the repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-    - name: Install dependencies
-      run: |
-        pip install requests PyGithub
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install PyGithub requests
 
-    - name: Run the update script
-      run: |
-        python ./update_ip_blocks_nigeria.py
-      continue-on-error: true
-
-    - name: Check if changes were made
-      run: |
-        if git diff --quiet; then
-          echo "No changes to commit."
-        else
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add .
-          git commit -m "Auto-update IP block list for Nigeria"
-          git push
-        fi
+      - name: Run the IP block update script
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Make sure this line is correct
+        run: python ./update_ip_blocks_nigeria.py
